--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -11,8 +11,7 @@
 }
 
 header {
-  background: url("../assets/bg.png");
-  background-size: cover;
+  position: absolute;
 }
 
 header ul {
@@ -25,6 +24,7 @@ header ul {
 header ul div.izq {
   width: 25%;
   color: white;
+  text-align: center;
 }
 
 header ul div.der {
@@ -115,5 +115,73 @@ header .footer img {
   width: 100%;
   margin-bottom: -0.5em;
   height: 100%;
+  height: 200px;
+}
+
+section#main {
+  background: white;
+  height: 50vh;
+  z-index: 2;
+  width: 100%;
+}
+
+section#main .contenedor {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+section#main .contenedor .registrarse {
+  border-radius: 5px;
+  border: 1px solid black;
+  background: white;
+  text-align: center;
+  margin: auto;
+  position: absolute;
+  margin-top: -6.6em;
+  z-index: 3;
+  width: 100%;
+  max-width: 430px;
+}
+
+section#main .contenedor .registrarse h2 {
+  color: black;
+  font-family: 'Open Sans';
+  font-size: 2em;
+  font-weight: 300;
+  padding: 0.5em;
+}
+
+section#main .contenedor .registrarse form {
+  padding-top: 1em;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+section#main .contenedor .registrarse form input {
+  padding: 3%;
+  font-family: 'Open Sans';
+  font-size: 1em;
+  margin: 0em 2em 0.8em 2em;
+  border-color: transparent;
+  border-bottom: 1px solid black;
+}
+
+section#main .contenedor .registrarse form input[type="submit"] {
+  background: #0a54f3;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+  color: white;
+  margin: 0;
+  margin-top: 1em;
+  border: transparent;
 }
 /*# sourceMappingURL=style.css.map */
