--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -148,6 +148,7 @@ section#main {
   background: #662bc5;
   z-index: 2;
   width: 100%;
+  padding-bottom: 5.42em;
 }
 
 section#main .contenedor {
@@ -157,57 +158,74 @@ section#main .contenedor {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  padding: 1%;
 }
 
-section#main .contenedor .registrarse {
-  border-radius: 5px;
-  border: 1px solid black;
-  background: white;
-  text-align: center;
-  margin: auto;
-  position: absolute;
-  margin-top: -6.6em;
-  z-index: 3;
-  width: 100%;
-  max-width: 430px;
-}
-
-section#main .contenedor .registrarse h2 {
-  color: black;
-  font-family: 'Open Sans';
-  font-size: 2em;
-  font-weight: 300;
-  padding: 0.5em;
-}
-
-section#main .contenedor .registrarse form {
-  padding-top: 1em;
+section#main .contenedor .der {
+  width: 50%;
+  color: white;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  justify-items: flex-start;
 }
 
-section#main .contenedor .registrarse form input {
-  padding: 3%;
-  font-family: 'Open Sans';
-  font-size: 1em;
-  margin: 0em 2em 0.8em 2em;
-  border-color: transparent;
-  border-bottom: 1px solid black;
+section#main .contenedor .der h2 {
+  font-size: 2em;
+  text-align: left;
+  width: 100%;
+  font-family: "soleil";
+  font-weight: 300;
+  margin-bottom: 0.5em;
 }
 
-section#main .contenedor .registrarse form input[type="submit"] {
-  background: #0a54f3;
-  border-bottom-left-radius: 5px;
-  border-bottom-right-radius: 5px;
+section#main .contenedor .der p {
+  font-family: "soleil";
+  text-align: justify;
+}
+
+section#main .contenedor .der button {
+  padding: 0.5em;
+  width: 100%;
+  max-width: 200px;
+  border: 1px solid rgba(255, 255, 255, 0.301);
+  background-image: linear-gradient(-226deg, #b73dc7, #a740c4 8%, #714bbb 38%, #5358cf 66%, #3f64d4 84%, #2b69dd);
   color: white;
-  margin: 0;
-  margin-top: 1em;
-  border: transparent;
+  border-radius: 10px;
+  margin-top: 1.5em;
+  margin-bottom: 2em;
+  font-size: 1.01em;
+}
+
+section#main .contenedor .izq {
+  width: 50%;
+}
+
+section#main .contenedor .izq img {
+  width: 100%;
+}
+
+section#main:after {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  margin-top: 70em;
+  background-position: top;
+  height: 150px;
+  background: url("../assets/curva.svg");
+  background-repeat: no-repeat;
+  content: "";
 }
 
 section#top {
