--- a/frontend/css/style.scss
+++ b/frontend/css/style.scss
@@ -22,6 +22,7 @@ header {
         transform: skewY(6.2deg);
 
         ul {
+            padding: 1em;
             margin-top: 10em;
             padding-top: 1%;
             display: flex;
@@ -74,6 +75,7 @@ header {
             font-weight: 300;
             text-align: center;
             font-size: 2.2em;
+            padding: 0.3em;
         }
 
         input {
@@ -133,13 +135,13 @@ section#main {
     width: 100%;
     padding-top: 2.5em;
     .curva {
-        //height: 100px;
         transform: rotate(180deg);
         margin-bottom: -1%;
-
-
         img {
+            max-height: 200px;
+            width: 100%;
             height: 100%;
+
         }
     }
 
@@ -163,7 +165,7 @@ section#main {
                 font-size: 2em;
                 text-align: left;
                 width: 100%;
-                font-family: "soleil";
+                font-family: "Open Sans";
                 font-weight: 300;
                 margin-bottom: 0.5em;
             }
@@ -171,6 +173,7 @@ section#main {
             p {
                 font-family: "Open Sans";
                 text-align: justify;
+                padding: 1em;
             }
 
             button {
@@ -183,10 +186,10 @@ section#main {
 
                 border-radius: 10px;
                 margin-top: 1.5em;
-                margin-bottom: 2em;
+                margin-bottom: 3em;
                 font-size: 1.01em;
                 transition: .6s linear;
-
+            
                 &:hover {
                     box-shadow: 0 12px 15px 0 rgba(0, 0, 0, 0.178);
                     -webkit-transform: translateY(-4px);
@@ -208,6 +211,11 @@ section#main {
 
 }
 
+section#carousel{
+    .contenedor{
+        padding-bottom: 5em;
+    }
+}
 section#top {
     margin-top: 10em;
 
@@ -225,6 +233,7 @@ section#top {
         margin-top: 5em;
         display: flex;
         flex-wrap: wrap;
+        justify-content: center;
         .caja {
             text-align: center;
             justify-content: center;
@@ -254,7 +263,6 @@ section#facil {
     padding-bottom: 2em;
     .contenedor {
         font-family: 'Roboto';
-
         h2 {
             padding-top: 1.5em;
             text-align: centeR;
@@ -343,5 +351,26 @@ footer{
         text-align: center;
         font-family: 'Roboto';
 
+    }
+}
+
+@media screen and (max-width: 854px){
+    section#main{
+        .contenedor{
+            .izq, .der{
+                width: 100%;
+                text-align: center;
+                align-items: center;
+                justify-content: center;
+                h2{
+                    text-align: center;
+                    margin-top: 1em;
+                    padding-bottom: 0.5em;
+                }
+                img{
+                    max-width: 400px;
+                }
+            }
+        }
     }
 }
