--- a/frontend/css/login.css
+++ b/frontend/css/login.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background: #C5D5EA;
+  background: #dace8c;
 }
 
 .padre {
@@ -22,6 +22,8 @@ body {
           flex-direction: row;
   left: 50%;
   top: 50%;
+  -webkit-box-shadow: -1px 0px 50px -7px rgba(0, 0, 0, 0.75);
+          box-shadow: -1px 0px 50px -7px rgba(0, 0, 0, 0.75);
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
 }
@@ -30,6 +32,7 @@ body {
   width: 50%;
   padding: 0.6em;
   text-align: center;
+  padding-top: 2.2em;
 }
 
 .padre .izq img {
@@ -50,15 +53,33 @@ body {
 
 .padre .izq form label {
   font-family: 'Open Sans';
-  margin: 1%;
+  color: rgba(0, 0, 0, 0.637);
+  font-size: 1em;
+  font-weight: 300;
 }
 
 .padre .izq form input {
   width: 100%;
-  border: 1px solid rgba(0, 0, 0, 0.411);
+  border: 1px solid rgba(0, 0, 0, 0.623);
   border-radius: 3.9px;
   padding: 0.6em;
   max-width: 300px;
+}
+
+.padre .izq form button {
+  margin-top: 2em;
+  border: 1px solid black;
+  padding: 1% 2em;
+  color: white;
+  border-radius: 8px;
+  background: black;
+  -webkit-transition: 1s linear;
+  transition: 1s linear;
+}
+
+.padre .izq form button:hover {
+  color: black;
+  background: white;
 }
 
 .padre .der {
@@ -68,5 +89,6 @@ body {
 .padre .der img {
   width: 100%;
   max-height: 1000px;
+  height: 100%;
 }
 /*# sourceMappingURL=login.css.map */
