--- a/frontend/css/login.scss
+++ b/frontend/css/login.scss
@@ -4,7 +4,7 @@
 }
 
 body{
-    background: #C5D5EA;
+    background: rgb(218, 206, 140);
 }
 
 .padre{
@@ -16,11 +16,13 @@ body{
     flex-direction: row;
     left: 50%;
     top: 50%;
+    box-shadow: -1px 0px 50px -7px rgba(0,0,0,0.75);
     transform: translate(-50%, -50%);
     .izq{
         width: 50%;
         padding: 0.6em;
         text-align: center;
+        padding-top: 2.2em;
         img{
             max-width: 200px;
         }
@@ -35,14 +37,29 @@ body{
             display: inline-block;
             label{
                 font-family: 'Open Sans';
-                margin: 1%;
+                color: rgba(0, 0, 0, 0.637);
+                font-size: 1em;
+                font-weight: 300;
             }
             input{
                 width: 100%;
-                border: 1px solid rgba(0, 0, 0, 0.411);
+                border: 1px solid rgba(0, 0, 0, 0.623);
                 border-radius: 3.9px;
                 padding: 0.6em;
                 max-width: 300px;
+            }
+            button{
+                margin-top: 2em;
+                border: 1px solid black;
+                padding: 1% 2em;
+                color:white;
+                border-radius: 8px;
+                background: black;
+                transition: 1s linear;
+                &:hover{
+                    color: black;
+                    background: white;
+                }
             }
         }
         
@@ -52,6 +69,7 @@ body{
         img{
             width: 100%;
             max-height: 1000px;
+            height: 100%;
         }
     }
 }
