--- a/css/style.scss
+++ b/css/style.scss
@@ -13,13 +13,12 @@ header {
     background: url('../assets/melinda-derksen-718747-unsplash.jpg');
     background-size: coveR;
     padding-top: 1em;
-    padding-bottom: 5em;
+    padding-bottom: 5.5em;
     margin-top: -10em;
-    transform: skewY(-6.2deg);
+
 
     .contenedor {
 
-        transform: skewY(6.2deg);
 
         ul {
             padding: 1em;
@@ -49,7 +48,7 @@ header {
                     flex-wrap: nowrap;
 
                     a {
-                        white-space: nowrap;
+                       word-break: keep-all;
                         font-family: 'Open Sans';
                         text-decoration: none;
                         color: white;
@@ -104,7 +103,11 @@ header {
                 padding: 0.7%;
                 padding-left: 4%;
                 padding-right: 4%;
-
+                a{
+                    color: white;
+                    text-decoration: none;
+                    word-wrap: nowrap;
+                }
                 &:hover {
                     background: black;
                     cursor: pointer;
@@ -133,7 +136,7 @@ section#main {
     background: #662bc5;
     z-index: 2;
     width: 100%;
-    padding-top: 2.5em;
+    padding-top: 1.5em;
     .curva {
         transform: rotate(180deg);
         margin-bottom: -1%;
@@ -177,7 +180,7 @@ section#main {
             }
 
             button {
-                padding: 0.5em;
+                padding: 0.6em;
                 width: 100%;
                 max-width: 200px;
                 border: 1px solid rgba(255, 255, 255, 0.301);
@@ -217,10 +220,10 @@ section#carousel{
     }
 }
 section#top {
-    margin-top: 10em;
+    margin-top: 5em;
 
     h2 {
-        margin-top: 2em;
+        margin-top: .2em;
         text-align: center;
         font-family: 'Roboto';
         font-weight: 300;
@@ -230,7 +233,7 @@ section#top {
     padding-bottom: 6.5em;
 
     .contenedor {
-        margin-top: 5em;
+        margin-top: 4em;
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
