--- a/css/login.scss
+++ b/css/login.scss
@@ -1,13 +1,13 @@
-*{
+* {
     margin: 0;
     box-sizing: border-box;
 }
 
-body{
+body {
     background: rgb(218, 206, 140);
 }
 
-.padre{
+.padre {
     width: 100%;
     background: White;
     max-width: 1000px;
@@ -16,57 +16,85 @@ body{
     flex-direction: row;
     left: 50%;
     top: 50%;
-    box-shadow: -1px 0px 50px -7px rgba(0,0,0,0.75);
+    box-shadow: -1px 0px 50px -7px rgba(0, 0, 0, 0.75);
     transform: translate(-50%, -50%);
-    .izq{
+
+    .izq {
         width: 50%;
         padding: 0.6em;
         text-align: center;
         padding-top: 2.2em;
-        img{
+
+        img {
             max-width: 200px;
         }
-        p{
+
+        p {
             margin-top: 1.5em;
             font-family: 'Open Sans';
             margin-bottom: 1.5em;
             font-weight: 300;
         }
-        form{
+
+        form {
             width: 100%;
             display: inline-block;
-            label{
+
+            .exito {
+                display: none;
+                text-align: center;
+                padding: 2%;
+                color: white;
+                max-width: 300px;
+                margin: auto;
+                font-weight: bold;
+                margin-top: 0.9em;
+                font-size: 1.2em;
+                background: rgb(255, 0, 0);
+                p{
+                    margin: auto;
+                }
+                
+            }
+
+            label {
                 font-family: 'Open Sans';
                 color: rgba(0, 0, 0, 0.637);
                 font-size: 1em;
                 font-weight: 300;
             }
-            input{
+
+            input {
                 width: 100%;
                 border: 1px solid rgba(0, 0, 0, 0.623);
                 border-radius: 3.9px;
                 padding: 0.6em;
                 max-width: 300px;
             }
-            button{
+
+            input[type='submit'] {
                 margin-top: 2em;
                 border: 1px solid black;
                 padding: 1.9% 4em;
-                color:white;
+                color: white;
                 border-radius: 8px;
                 background: black;
                 transition: 1s linear;
-                &:hover{
+
+                &:hover {
                     color: black;
+                    cursor: pointer;
                     background: white;
                 }
             }
         }
-        
+
     }
-    .der{
+
+    .der {
         width: 50%;
-        img{
+
+        img {
             width: 100%;
             max-height: 1000px;
             height: 100%;
