--- a/css/style.css
+++ b/css/style.css
@@ -11,11 +11,12 @@
 }
 
 header {
-  background: url("../assets/melinda-derksen-718747-unsplash.jpg");
+  background: url("../assets/back.jpg");
   background-size: coveR;
   padding-top: 1em;
-  padding-bottom: 5.5em;
+  padding-bottom: 7.5em;
   margin-top: -10em;
+  background-position-y: -2em;
 }
 
 header .contenedor ul {
@@ -128,10 +129,15 @@ header div.contenido .botones button a {
 }
 
 header div.contenido .botones button:hover {
-  background: black;
+  background: white;
+  color: black;
   cursor: pointer;
   -webkit-transition-duration: 1s;
           transition-duration: 1s;
+}
+
+header div.contenido .botones button:hover a {
+  color: black;
 }
 
 header .footer {
@@ -146,15 +152,16 @@ header .footer img {
 }
 
 section#main {
-  background: #662bc5;
+  background: #00d563;
   z-index: 2;
   width: 100%;
-  padding-top: 1.5em;
+  padding-top: 4.5em;
 }
 
 section#main .curva {
   -webkit-transform: rotate(180deg);
           transform: rotate(180deg);
+  padding-bottom: 2em;
   margin-bottom: -1%;
 }
 
@@ -237,7 +244,11 @@ section#main .contenedor .izq {
   width: 50%;
 }
 
-section#main .contenedor .izq img {
+section#main .contenedor .izq .verdeclaro {
+  border: 10px solid #00d563;
+}
+
+section#main .contenedor .izq .verdeclaro img {
   width: 100%;
 }
 
